@@ -177,3 +177,18 @@ gametype NEXUIZM new extend Q3M
     master query = empty full
     master for gametype = NEXUIZS
 end
+
+gametype WARSOWS new extend Q3S
+    name = Warsow
+    template var = WARSOW
+    game rule = gamename
+end
+gametype WARSOWM new extend Q3M
+    name = Warsow Master
+    template var = WARSOWMASTER
+    default port = 27950
+    master packet = \377\377\377\377getservers Warsow %s %s
+    master protocol = 6
+    master query = empty full
+    master for gametype = WARSOWS
+end
