@@ -1,0 +1,36 @@
+/* XPM */
+static char * warsow_xpm[] = {
+"16 16 17 1",
+" 	c None",
+".	c #050506",
+"+	c #352257",
+"@	c #47223A",
+"#	c #343334",
+"$	c #563933",
+"%	c #882B06",
+"&	c #762E2D",
+"*	c #533592",
+"=	c #783761",
+"-	c #5D5A5D",
+";	c #EC4800",
+">	c #837C7C",
+",	c #9A9B98",
+"'	c #B1B3B0",
+")	c #BCBEBA",
+"!	c #F4F6F3",
+". *+++++++++++@.",
+".**+---------->-",
+".**.'!!!!!!!!!!!",
+".**#!)##########",
+".*+-!-*.>#+==@&@",
+".*.))++-!!====&$",
+".*#!!,,!'!!-@&&&",
+".+-!!!!'.,!!!!-&",
+".*....)!)!,>!!$%",
+".*****#)!>&.'!%&",
+".****==@>&&$!>;%",
+"-=-----$---)!$;%",
+"!!!!!!!!!!!!)%;%",
+"----------->$%;%",
+".@@@@&&&%%%%%;;.",
+"............... "};
