@@ -132,6 +132,7 @@ enum server_type {
   JK3_SERVER,
   NETP_SERVER,
   NEXUIZ_SERVER,
+  WARSOW_SERVER,
   GPS_SERVER,
   UNKNOWN_SERVER
 };
