@@ -1,5 +1,6 @@
 Nov 01, 2005: <l-n@users.sourceforge.net>
 - add gslist Q4 master
+- initial Warsow support, partially broken
 
 Oct 27, 2005: <l-n@users.sourceforge.net>
 - unescape Q4 clan tags (thanks Gonzalo Nemmi for reporting)
